changes (partial) after DR and Joost internal review

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,6 +9,59 @@
   publisher={Wiley Online Library}
 }
 
+@article{fujita2009serial,
+  title={Serial prostate biopsies are associated with an increased risk of erectile dysfunction in men with prostate cancer on active surveillance},
+  author={Fujita, Kazutoshi and Landis, Patricia and McNeil, Brian K and Pavlovich, Christian P},
+  journal={The Journal of urology},
+  volume={182},
+  number={6},
+  pages={2664--2669},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{carvalho,
+  title={Estimating the risks and benefits of active surveillance protocols for prostate cancer: a microsimulation study},
+  author={de Carvalho, Tiago M and Heijnsdijk, Eveline AM and de Koning, Harry J},
+  journal={BJU international},
+  volume={119},
+  number={4},
+  pages={560--566},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{krahn1994screening,
+  title={Screening for prostate cancer: a decision analytic view},
+  author={Krahn, Murray D and Mahoney, John E and Eckman, Mark H and Trachtenberg, John and Pauker, Stephen G and Detsky, Allan S},
+  journal={Jama},
+  volume={272},
+  number={10},
+  pages={773--780},
+  year={1994},
+  publisher={American Medical Association}
+}
+
+@article{etzioni2002overdiagnosis,
+  title={Overdiagnosis due to prostate-specific antigen screening: lessons from US prostate cancer incidence trends},
+  author={Etzioni, Ruth and Penson, David F and Legler, Julie M and Di Tommaso, Dante and Boer, Rob and Gann, Peter H and Feuer, Eric J},
+  journal={Journal of the National Cancer Institute},
+  volume={94},
+  number={13},
+  pages={981--990},
+  year={2002},
+  publisher={Oxford University Press}
+}
+
+@article{turnbull1976empirical,
+  title={The empirical distribution function with arbitrarily grouped, censored and truncated data},
+  author={Turnbull, Bruce W},
+  journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  pages={290--295},
+  year={1976},
+  publisher={JSTOR}
+}
+
 @article{inoue2018comparative,
   title={Comparative Analysis of Biopsy Upgrading in Four Prostate Cancer Active Surveillance Cohorts},
   author={Inoue, Lurdes YT and Lin, Daniel W and Newcomb, Lisa F and Leonardson, Amy S and Ankerst, Donna and Gulati, Roman and Carter, H Ballentine and Trock, Bruce J and Carroll, Peter R and Cooperberg, Matthew R and others},
@@ -62,16 +115,18 @@ publisher={Institute of Mathematical Statistics}
   publisher={American Society of Clinical Oncology}
 }
 
-@article{bul2013active,
-  title={Active surveillance for low-risk prostate cancer worldwide: the PRIAS study},
-  author={Bul, Meelan and Zhu, Xiaoye and Valdagni, Riccardo and Pickles, Tom and Kakehi, Yoshiyuki and Rannikko, Antti and Bjartell, Anders and Van Der Schoot, Deric K and Cornel, Erik B and Conti, Giario N and others},
-  journal={European urology},
-  volume={63},
-  number={4},
-  pages={597--603},
-  year={2013},
-  publisher={Elsevier}
+@article{Gleason_interobs_var,
+title={Accuracy of biopsy {Gleason} scores from a large uropathology laboratory: use of a diagnostic protocol to minimize observer variability},
+author={Carlson, Grant D. and Calvanese, Christina B. and Kahane, Hillel and Epstein, Jonathan I.},
+journal={Urology},
+volume={51},
+number={4},
+pages={525--529},
+year={1998},
+publisher={Elsevier}
 }
+
+
 
 @article{lopez2014optimalcutpoints,
 title={{OptimalCutpoints: an R package for selecting optimal cutpoints in diagnostic tests}},
@@ -147,6 +202,17 @@ volume={193},
 number={3},
 pages={807--811},
 year={2015},
+publisher={Elsevier}
+}
+
+@article{bokhorst2016decade,
+title={A decade of active surveillance in the {PRIAS} study: an update and evaluation of the criteria used to recommend a switch to active treatment},
+author={Bokhorst, Leonard P and Valdagni, Riccardo and Rannikko, Antti and Kakehi, Yoshiyuki and Pickles, Tom and Bangma, Chris H and Roobol, Monique J and {\relax PRIAS study group}},
+journal={European Urology},
+volume={70},
+number={6},
+pages={954--960},
+year={2016},
 publisher={Elsevier}
 }
 
