--- a/report/decision_analytic/mdm/latex/main_manuscript.tex
+++ b/report/decision_analytic/mdm/latex/main_manuscript.tex
@@ -30,11 +30,11 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \affiliation{\affilnum{1}Department of Biostatistics, Erasmus University Medical Center, the Netherlands\\
 \affilnum{2}Department of Public Health, Erasmus University Medical Center, the Netherlands\\
 \affilnum{3}Department of Urology, Erasmus University Medical Center, the Netherlands\\
-\affilnum{4}Department of Medical Statistics and Bioinformatics, Leiden University Medical Center, The Netherlands}
+\affilnum{4}Department of Biomedical Data Sciences, Leiden University Medical Center, the Netherlands}
 
 \corrauth{Anirudh Tomer, 
 Erasmus MC,
-t.a.v. Anirudh Tomer / kamer Na-2701,
+t.a.v. Anirudh Tomer / kamer flex Na-2823,
 PO Box 2040,
 3000 CA Rotterdam,
 the Netherlands.}
@@ -43,16 +43,24 @@ the Netherlands.}
 
 \input{mainmatter/abstract}
 
-\keywords{Active surveillance, biopsy, joint models, personalized medicine, prostate cancer}
+\keywords{Active~surveillance, biopsy, joint~models, personalized~medical~decisions, prostate~cancer}
 
 \maketitle
 
-\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word Count: 4046}
+\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word count: 3728}
 \thefootnote
 
 \input{mainmatter/introduction}
-\input{mainmatter/methods}
+
+\section{Methods}
+\label{sec:methods}
+\input{mainmatter/methods_study_pop}
+\input{mainmatter/methods_jm}
+\input{mainmatter/methods_pers_decisions}
+\input{mainmatter/methods_sim_study}
+
 \input{mainmatter/results}
+
 \input{mainmatter/discussion}
 
 \input{mainmatter/acknowledgement}
