--- a/report/decision_analytic/mdm/latex/supplementary.tex
+++ b/report/decision_analytic/mdm/latex/supplementary.tex
@@ -66,7 +66,7 @@
 \affil[1]{Department of Biostatistics, Erasmus University Medical Center, the Netherlands}
 \affil[2]{Department of Public Health, Erasmus University Medical Center, the Netherlands}
 \affil[3]{Department of Urology, Erasmus University Medical Center, the Netherlands}
-\affil[4]{Department of Medical Statistics and Bioinformatics, Leiden University Medical Center, the Netherlands}
+\affil[4]{Department of Biomedical Data Sciences, Leiden University Medical Center, the Netherlands}
 \affil[ ]{*\textit {email}: a.tomer@erasmusmc.nl}
 
 \date{}
@@ -76,6 +76,8 @@
 \input{supplementary/jm_param_estimation}
 \clearpage
 \input{supplementary/prias_param_estimates}
+\clearpage
+\input{supplementary/full_results}
 \clearpage
 \input{supplementary/source_code}
 \clearpage
