--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -2,18 +2,12 @@
 
 \section{Discussion}
 \label{sec:discussion}
-BASED ON A SINGLE AS PROGRAM. We NEED MORE because of classification accuracy 
+In this paper we proposed a personalized methodology for making decisions for prostate cancer biopsies in active surveillance (AS) programs. Our methodology uses the entire history of prostate-specific antigen (PSA) levels and digital rectal examination (DRE) scores, and results of the latest biopsy, of each patient at each follow-up visit, to make a decision of biopsy at that visit. To this end, it utilizes joint models for time-to-event and longitudinal data. Using joint models, our method combines the observed data of a patient, into a personalized cancer progression risk profile. It schedules a biopsy if the cumulative risk of cancer progression at a follow-up visit is above a certain threshold.
 
-AND RIsk automatic did not work best for delay, but more AS programs are needed to evluate it best.
+The proposed personalized method has the following advantages over the in-practice fixed/heuristic schedules \citep{loeb2014heterogeneity,inoue2018comparative} of biopsies. Firstly, it accounts for varying cancer progression speeds of each patient. In contrast fixed/heuristic schedules, use a common schedule for all patients, which leads to many unnecessary biopsies in the case of \textit{slow progressing} (almost 50\% of all patients, see \hyperref[sec:results]{Results}) patients. Secondly, by providing urologists and patients an estimate of the risk of cancer progression, a more informed decision of biopsy can be made. The personalized method also has advantages over the in-practice PRIAS schedule of the world's largest AS program PRIAS. In PRIAS, the PSA profiles of patients are modeled linearly over time, which is contrary to observed PSA profiles of the patients (see Figure~6 in Appendix B). Consequently, PRIAS' method of scheduling more biopsies for only the \textit{fast progressing} patients, may not always correctly identify \textit{fast progressing} patients. To this end, we assume a non-linear profile for PSA, and utilize the complete observed data (historical PSA and DRE, time of latest biopsy) to develop the risk function (see Equation~\ref{eq:dynamic_risk_prob}), which is finer quantitative measure.
 
-Prostate cancer active surveillance (AS) programs schedule biopsies for patients to detect cancer progression. Biopsies are burdensome and hence each biopsy counts. However, currently there is no consensus on the best time interval for subsequent repeat biopsies \cite{loeb2014heterogeneity}. In order to reduce the delay in detection of cancer progression many AS programs schedule biopsies annually which leads to many unnecessary biopsies for slowly progressing patients. The world's largest AS program PRIAS attempts to identify these patients using their prostate-specific antigen (PSA) profile. However, despite their methodology, compliance for biopsies is low \citep{bokhorst2015compliance}. With an aim to better balance the burden of biopsies on patients and the delay in detection of cancer patients, in this article, we presented a methodology for personalizing the biopsy decision making process in AS programs.
+We compared the personalized approach with the in-practice biopsy schedules, by conducting a realistic and extensive simulation study. We evaluated the biopsy schedules on the basis of the number of biopsies they schedule, and the corresponding delay in detection of cancer progression. From the simulation study we found that both the personalized and PRIAS schedules provide much better balance between the number of biopsies and delay in detection of progression, than the fixed/heuristic approaches (see Figure~\ref{fig:better_balance_results}). Since, we conducted a simulation study, we are able to retrospectively check the impact of different schedules on patients with different speeds of cancer progression. In this regard, we observed that the commonly used annual schedule puts the highest burden on the \textit{slow progressing} patients (see Figure~\ref{fig:sim_res_combined}), by scheduling ten biopsies for each such patient. The PRIAS schedule, despite its effort to identify such patients using PSA doubling time, schedules a minimum of four and a median of six unnecessary biopsies for them. In contrast, the personalized biopsy decision making approach reduces it to a median of two to four biopsies depending upon the choice of the risk threshold. 
 
-Our methodology utilizes joint models for time-to-event and longitudinal data. Existing approaches for scheduling biopsies either discard information from PSA and digital rectal examination (DRE), or use crude measures such as PSA doubling time. In contrast, our proposed methodology makes a separate decision of biopsy for each patient at each follow-up visit on the basis of finer measures such as patient specific underlying instantaneous PSA value, PSA velocity, probability of having DRE larger than level T1c, and time of the latest biopsy. Our method combines the aforementioned measures into a patient and visit specific cancer progression risk function. It schedules a biopsy if the risk of cancer progression crosses a certain threshold. We compared our approach with the existing annual and PRIAS schedules, by conducting a realistic and extensive simulation study, for a 10 year follow-up period.
+In this regard, a personalized approach with a 10\% risk threshold has a similar delay in detection of cancer progression as PRIAS, and it schedules less biopsies (see Figure~\ref{fig:sim_res_combined}). While, it may seem attractive for clinical use, but in light of the non-compliance results \citep{bokhorst2015compliance}, prescribing the same threshold to all patients may not be suitable. Patients have varying tolerance for the number of biopsies, and apprehensions about the delay in detection of cancer progression. Both of these must be considered while making the choice of a risk threshold. Furthermore, the choice should not be made only on the basis of point estimates such as median number of biopsies and/or median delay. Instead, measures of variance (see Figure~\ref{fig:sim_res_combined}) of both quantities should also be considered.
 
-In the simulation study we found that the patients who never obtain cancer progression in the 10 year follow-up incur much burden due to currently used schedules. The PRIAS schedule, despite its effort to identify such patients using PSA doubling time, schedules a minimum of 4 biopsies and a median of 6 unnecessary biopsies for such patients. The annual schedule performs even worse by scheduling 10 unnecessary biopsies. In contrast, the personalized schedules that we proposed reduce it to a median of 2 to 3 biopsies depending upon the choice of the risk threshold. The choice of the risk threshold is also important. A low risk threshold such as 5\% risk may seem attractive to detect cancer progressions in time. However, it can schedule as many biopsies as annual schedule does. An alternative is to either use a higher risk threshold or to automatically select it (see \hyperref[sec:methods]{Methods}). The personalized approach based on automatically chosen thresholds is useful when the manual choice of a risk thresholds is dilemmatic. Since it obtains thresholds from the observed data of patients, it is generic for usage in other scheduling applications.
-
-On average the the personalized biopsy approach which uses 15\% risk threshold, schedules only 3 biopsies per person than the 4.5 scheduled by PRIAS schedule. However, on average the personalized approach (15\% risk) exceeds the delay in detection of cancer progression due to PRIAS schedule by only 3.4 months. The 3 biopsies that personalized approach schedules matches the number of biopsies patients agree to undergo in PRIAS, if the non-compliance rates \cite{bokhorst2015compliance} are also accounted for. Hence the personalized approach for biopsies better balances the number of biopsies per detected progression compared to the existing PRIAS and annual schedules.
-
-A limitation of our approach however, is that at any given follow-up visit it cannot guarantee the total number of future biopsies required to detect cancer progression. This is due to the fact that the cancer progression cannot be foreseen with 100\% accuracy. Hence, attempts to create an entire optimal schedule may not always work. Instead, such a guarantee can be given with a certain probability (see Figure~\ref{fig:sim_res_combined}). For example, if a 90\% surety is required on the delay in detection of cancer progression being less than or equal to two years, then the personalized schedule with automatically chosen risk threshold schedules the least number of biopsies on average. Urologists may also choose a personalized biopsy approach suitable to patients with a certain speed of progression, if it is known in advance. In order to aid urologists in biopsy decision making process, we have developed a web application (examples included), hosted at \url{www.<insert-name-here>.com}.
- 
-
+A limitation of our results is that, even if they are based on the world's largest AS program, other AS programs may differ in the patient characteristics\cite{inoue2018comparative}. In this regard, a simulation study based on a multi-center cohort is required. Currently, the follow-up of period of our study is ten years. More detailed results, especially for \textit{slow progressing} patients, can be obtained using a cohort having a longer follow-up period. Since Biopsy Gleason grading is susceptible to inter-observer variation \cite{Gleason_interobs_var}, accounting for it in our model will also be interesting to investigate further. There is also potential for including diagnostic information from magnetic resonance imaging (MRI) in our model. Lastly, considering quality of life measures while discussing utility of each personalized approach may also lead to better decision making. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible.
